[gd_scene load_steps=2 format=3 uid="uid://cw5jg8h2qnqfb"]

[ext_resource type="Script" path="res://scripts/ui/CharacterSelectScreen.gd" id="1"]

[node name="CharacterSelectScreen" type="CanvasLayer"]
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SELECT YOUR CHARACTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContent" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="CharacterGridScroll" type="ScrollContainer" parent="ColorRect/MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterGrid" type="GridContainer" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/CharacterGridScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="InfoPanel" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/MainContent"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="CharacterName" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/InfoPanel"]
layout_mode = 2
text = "Select a Character"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/InfoPanel"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/InfoPanel"]
layout_mode = 2
text = "STATS"

[node name="StatsLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/InfoPanel"]
layout_mode = 2
text = "HP: -
Speed: -
Damage: -
Pickup Range: -"

[node name="Separator2" type="HSeparator" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/InfoPanel"]
layout_mode = 2

[node name="PassiveTitle" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/InfoPanel"]
layout_mode = 2
text = "PASSIVE ABILITY"

[node name="PassiveLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/InfoPanel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a character to view details"
fit_content = true

[node name="ActionButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/MainContent/InfoPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "SELECT"

[node name="BottomBar" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "< BACK"

[node name="Spacer" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EssenceLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
text = "Essence: 0"
horizontal_alignment = 2
vertical_alignment = 1
